added Options and handle it