@@ -4,6 +4,8 @@ import com.spring.ecommerce.mongodb.persistence.dto.ProductForm;
 import com.spring.ecommerce.mongodb.persistence.model.*;
 import com.spring.ecommerce.mongodb.persistence.model.variants.ProductVariants;
 import com.spring.ecommerce.mongodb.persistence.model.variants.VariantOptions;
+import com.spring.ecommerce.mongodb.persistence.model.variants.VariantType;
+import com.spring.ecommerce.mongodb.persistence.projection.ProductProjection;
 import com.spring.ecommerce.mongodb.repository.*;
 import com.spring.ecommerce.mongodb.services.CategoryServices;
 import com.spring.ecommerce.mongodb.services.CollectionServices;
@@ -13,10 +15,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -38,8 +37,8 @@ public class ProductServicesImpl implements ProductServices {
 
 
     @Override
-    public List<Product> findAll(){
-        return productRepository.findAll();
+    public List<ProductProjection> findAll(){
+        return productRepository.findAllProjected();
     }
 
     @Override
@@ -58,51 +57,85 @@ public class ProductServicesImpl implements ProductServices {
         return productRepository.findById(id);
     }
 
+
     @Override
     public Product addProduct(ProductForm form) {
+        // Lấy danh sách categories
         List<Category> items = form.getCategories().stream()
-                .map( item -> {
-                Optional<Category> categoryOptional = categoryServices.findById(item);
-                if (categoryOptional.isPresent()) {
-                    Category category = categoryOptional.get();
-                    return category;
-                }
-                return null;
-                }).toList();
-        ProductDimensions dimensions = new ProductDimensions(form.getDimensions().getId(),form.getDimensions().getWeight(),form.getDimensions().getLength(),form.getDimensions().getHeight(),form.getDimensions().getWidth());
+                .map(item -> categoryServices.findById(item).orElse(null))
+                .filter(Objects::nonNull) // Loại bỏ các category null
+                .collect(Collectors.toList());
+
+        // Tạo ProductDimensions
+        ProductDimensions dimensions = new ProductDimensions(
+                form.getDimensions().getId(),
+                form.getDimensions().getWeight(),
+                form.getDimensions().getLength(),
+                form.getDimensions().getHeight(),
+                form.getDimensions().getWidth()
+        );
         dimensions = dimensionRepository.save(dimensions);
 
-        Product product = new Product(form.getName(),form.getDescription(),form.getBrandName(),form.getSellingTypes(),items,dimensions);
+        // Tạo Product với options
+        Product product = new Product(
+                form.getName(),
+                form.getDescription(),
+                form.getBrandName(),
+                form.getSellingTypes(),
+                items,
+                dimensions
+        );
 
-//
-//        Product savedProduct = save(product);
-
+        // Kiểm tra và xử lý các biến thể
         if (Boolean.TRUE.equals(form.isHasVariants()) && form.getVariants() != null) {
-            List<VariantOptions> allVariantOptions = form.getVariants().stream()
-                    .filter(variant -> variant.getVariantOptions() != null)
-                    .flatMap(variant -> variant.getVariantOptions().stream())
-                    .collect(Collectors.toList());
+            product.setOptions(form.getOptions());
+            List<ProductVariants> newVariants = new ArrayList<>();
 
-            if (!allVariantOptions.isEmpty()) {
-                variantOptionsRepository.saveAll(allVariantOptions); // Lưu tất cả VariantOptions
+            // Tạo các biến thể mới từ form
+            for (ProductVariants variantForm : form.getVariants()) {
+                // Tạo danh sách VariantOptions dựa trên options từ form
+                List<VariantOptions> variantOptionsList = Arrays.asList(
+                        new VariantOptions(VariantType.COLOR, variantForm.getVariantOptions().get(0).getValue()),
+                        new VariantOptions(VariantType.RAM, variantForm.getVariantOptions().get(1).getValue()),
+                        new VariantOptions(VariantType.STORAGE, variantForm.getVariantOptions().get(2).getValue())
+                );
+
+                // Tạo mới biến thể
+                ProductVariants newVariant = new ProductVariants();
+                newVariant.setVariantOptions(variantOptionsList);
+                newVariant.setRating(variantForm.getRating());
+                newVariant.setSKU(variantForm.getSKU());
+                newVariant.setQuantityAvailable(variantForm.getQuantityAvailable());
+                newVariant.setSoldQuantity(variantForm.getSoldQuantity());
+                newVariant.setPrice(variantForm.getPrice());
+                newVariant.setSalePrice(variantForm.getSalePrice());
+                newVariant.setMRSP(variantForm.getMRSP());
+                newVariant.setImageURLs(variantForm.getImageURLs());
+
+                newVariants.add(newVariant);
             }
 
-            productVariantsRepository.saveAll(form.getVariants()); // Lưu tất cả ProductVariants
+            // Lưu tất cả ProductVariants mới
+            productVariantsRepository.saveAll(newVariants);
 
-            // Cập nhật lại sản phẩm
+            // Cập nhật lại sản phẩm với thông tin biến thể mới
             product.setHasVariants(true);
-            product.setVariants(form.getVariants());
-        }
-        else {
+            product.setVariants(newVariants);
+        } else {
             product.setHasVariants(false);
             product.setVariants(null);
         }
+
+
+        // Cập nhật thời gian tạo và lưu sản phẩm
         product.setCreatedAt(LocalDateTime.now());
         return productRepository.save(product);
     }
 
+
+
     @Override
-    public Product updateProduct(String productId, Product form) {
+    public Product updateProduct(String productId, ProductForm form) {
         // Tìm sản phẩm theo ID
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new RuntimeException("Product not found"));
@@ -118,7 +151,7 @@ public class ProductServicesImpl implements ProductServices {
         // Cập nhật danh mục
         List<Category> items = form.getCategories().stream()
                 .map( item -> {
-                    Optional<Category> categoryOptional = categoryServices.findById(item.getId());
+                    Optional<Category> categoryOptional = categoryServices.findById(item);
                     if (categoryOptional.isPresent()) {
                         Category category = categoryOptional.get();
                         return category;
@@ -138,6 +171,7 @@ public class ProductServicesImpl implements ProductServices {
 
         // Cập nhật biến thể sản phẩm và tùy chọn
         if (Boolean.TRUE.equals(form.isHasVariants()) && form.getVariants() != null) {
+            product.setOptions(form.getOptions());
             List<ProductVariants> updatedVariants = new ArrayList<>();
 
             for (ProductVariants variantForm : form.getVariants()) {
@@ -157,6 +191,7 @@ public class ProductServicesImpl implements ProductServices {
                         variant.setSalePrice(variantForm.getSalePrice());
                         variant.setMRSP(variantForm.getMRSP());
                         variant.setImageURLs(variantForm.getImageURLs());
+
                         // Xử lý các tùy chọn biến thể (variantOptions)
                         if (variantForm.getVariantOptions() != null) {
                             List<VariantOptions> updatedVariantOptions = new ArrayList<>();
@@ -171,7 +206,6 @@ public class ProductServicesImpl implements ProductServices {
                                         // Cập nhật các trường của tùy chọn
                                         option.setVariantTypes(optionForm.getVariantTypes());
                                         option.setValue(optionForm.getValue());
-                                        // Thêm vào danh sách đã cập nhật
                                         updatedVariantOptions.add(option);
                                     }
                                 } else {
@@ -187,7 +221,22 @@ public class ProductServicesImpl implements ProductServices {
                     }
                 } else {
                     // Nếu biến thể không có ID, coi như tạo mới và thêm vào danh sách
-                    updatedVariants.add(variantForm);
+                    List<VariantOptions> variantOptionsList = Arrays.asList(
+                            new VariantOptions(VariantType.COLOR, variantForm.getVariantOptions().get(0).getValue()),
+                            new VariantOptions(VariantType.RAM, variantForm.getVariantOptions().get(1).getValue()),
+                            new VariantOptions(VariantType.STORAGE, variantForm.getVariantOptions().get(2).getValue())
+                    );
+                    ProductVariants newVariant = new ProductVariants();
+                    newVariant.setVariantOptions(variantOptionsList);
+                    newVariant.setRating(variantForm.getRating());
+                    newVariant.setSKU(variantForm.getSKU());
+                    newVariant.setQuantityAvailable(variantForm.getQuantityAvailable());
+                    newVariant.setSoldQuantity(variantForm.getSoldQuantity());
+                    newVariant.setPrice(variantForm.getPrice());
+                    newVariant.setSalePrice(variantForm.getSalePrice());
+                    newVariant.setMRSP(variantForm.getMRSP());
+                    newVariant.setImageURLs(variantForm.getImageURLs());
+                    updatedVariants.add(newVariant);
                 }
             }
 
@@ -202,14 +251,13 @@ public class ProductServicesImpl implements ProductServices {
             product.setVariants(null);
         }
 
-
-        // Cập nhật thời gian chỉnh sửa
+// Cập nhật thời gian chỉnh sửa
         product.setUpdatedAt(LocalDateTime.now());
 
-        // Lưu lại sản phẩm đã cập nhật
+// Lưu lại sản phẩm đã cập nhật
         return productRepository.save(product);
-    }
 
+    }
 
     public Product updateRating(String productId, double rating) {
         Product product = productRepository.findById(productId)
